<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.pieter.papper.DanceFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TableRow
                android:layout_width="310dp"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/dance_headbang_button"
                    android:layout_width="154dp"
                    android:layout_height="154dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="16dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:text="@string/headbang_button"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="8dp" />

                <Button
                    android:id="@+id/dance_vacuum_button"
                    android:layout_width="154dp"
                    android:layout_height="154dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="16dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:text="@string/vacuum_button" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/dance_picture_button"
                    android:layout_width="154dp"
                    android:layout_height="154dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="16dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:text="@string/take_picture_button"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="42dp" />

                <Button
                    android:id="@+id/dance_sax_button"
                    android:layout_width="154dp"
                    android:layout_height="154dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="16dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:text="@string/saxophone_button" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">

                <Button
                    android:id="@+id/dance_guitar_button"
                    android:layout_width="154dp"
                    android:layout_height="154dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="16dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:text="@string/guitar_button"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="42dp" />

                <Button
                    android:id="@+id/dance_football_button"
                    android:layout_width="154dp"
                    android:layout_height="154dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="16dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:text="@string/rugby_button" />
            </TableRow>
        </TableLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
